--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
         <div class="section2__container__main">
           <P>
             I am transparent 😇, ambitious and extremely curious.<br>
-            I love the process of realizing a well devised plan 😈. Especially, when the end-result helps someone. Better yet, if it contributes to humanity... On an EXISTENTIAL level! Oh, the drama. So fun 🙃.</p>
+            I love the process of realizing a well-devised plan 😈. Especially, when the end-result helps someone. Better yet, if it contributes to humanity... On an EXISTENTIAL level! Oh, the drama. So fun 🙃.</p>
           <p>
             <b><u>Why?</u></b> 🤔<br>
             Well, imagining the "impossible" and seeing it through, overcoming obstacles, making extraordinary relationships, the exploration, the knowledge one gains. What's not to love?</p>
           <p>
-            I am senior and <b>I am looking for</b> a place where I can leverage my creative thinking, imaginitive mind and can-do attitude to help our DOOMED humanity. THE END 🤪.
+            I am senior and <b>I am looking for</b> a place where I can leverage my creative thinking, imaginative mind and can-do attitude to help our DOOMED humanity. THE END 🤪.
           </p>
         </div>
 
@@ -158,7 +158,7 @@
                     <div class="pr_descr">
                       A full-stack UX focused JavaFX application for world maps' marketing.<br>
                       The application supports both the buyers and the company's employees.<br>
-                      i.e., it offers the options to create new maps or edit existing ones. Supports authorization requests and approvals. Allows clients to browse, purchase, subscribe and download default views or customized map views (e.g.,
+                      i.e., it offers options to create new maps or edit existing ones. Supports authorization requests and approvals. Allows clients to browse, purchase, subscribe and download default views or customized map views (e.g.,
                       specific tours, sites, etc...).
                     </div>
                     <div class="pr_techn">
@@ -249,10 +249,10 @@
                       </a>
                     </div>
                     <div class="pr_descr">
-                      I was curious about the web development processes.<br>
+                      I was curious about web development processes.<br>
                       Also, I like exploring. Whether it is CS-related or not.<br>
-                      So I figured I got nothing to lose. Here I am after a couple of weeks, got a pretty nice website as well as a peek as to what goes into making one.<br>
-                      Clearly, I have seen a tiny fraction of the tools and techniques available today. Nonetheless, I got a rough idea how things are, how they should be done, and another "project" to show. Neat huh :)?
+                      So I figured I got nothing to lose. Here I am after a couple of weeks, got a pretty nice website, as well as a, peek as to what goes into making one.<br>
+                      Clearly, I have seen a tiny fraction of the tools and techniques available today. Nonetheless, I got a rough idea of how things are, how they should be done, and another "project" to show. Neat huh :)?
                     </div>
                     <div class="pr_techn">
                       <div>
