--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <meta property="og:title" content="Julian Broudy" />
   <meta property="og:type" content="portfolio" />
   <meta property="og:url" content="http://www.broude.co.il/" />
+  <meta property="og:image" content="../lib/images/broude3_thumb.png">
+
 
   <!-- External -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -125,7 +127,7 @@
             <b><u>Why?</u></b> 🤔<br>
             Well, imagining the "impossible" and seeing it through, overcoming obstacles, making extraordinary relationships, the exploration, the knowledge one gains. What's not to love?</p>
           <p>
-            I am senior and <b>I am looking for</b> a place where I can leverage my creative thinking, imaginative mind and can-do attitude to help our DOOMED humanity. THE END 🤪.
+            Currently, I am in my senior year and <b>I am looking for</b> a place where I can leverage my creative thinking, imaginative mind and can-do attitude to help our DOOMED humanity. THE END 🤪.
           </p>
         </div>
 
@@ -365,7 +367,7 @@
             <li><a id="home-link" href="#home">Home</a></li>
             <li><a id="aboutMe-link" href="#aboutMe">About</a></li>
             <li><a id="myProjects-link" href="#myProjects">Projects</a></li>
-            <li><a id="contactMe-link" href="#contactMe">Say Hi</a></li>
+            <li><a id="contactMe-link" href="#contactMe">Resume</a></li>
           </ul>
         </div>
       </div>
