fixed WhatsApp thumbnail

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
   <meta name="description" content="Personal website that acts as a portfolio.">
   <meta name="keywords" content="Julian Broudy, Julian Broude">
   <meta property="og:title" content="Julian Broudy" />
-  <meta property="og:type" content="portfolio" />
+  <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.broude.co.il/" />
-  <meta property="og:image" content="../lib/images/broude3_thumb.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:url" content="http://broude.co.il/lib/images/broude3_thumb.png">
+  <meta property="og:image" itemprop="image" content="http://broude.co.il/lib/images/broude3_thumb.png">
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:description" content="Personal website that acts as a portfolio." />
+  <!-- <link itemprop="thumbnailUrl" href="http://broude.co.il/lib/images/broude3_thumb.png"> -->
 
 
   <!-- External -->
