update welcome-screen button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"  content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="Julian Broudy">
   <title>Julian Broudy</title>
@@ -13,12 +13,11 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.broude.co.il/" />
   <meta property="og:image:type" content="image/png">
-  <meta property="og:image:url" content="http://broude.co.il/lib/images/broude3_thumb.png">
-  <meta property="og:image" itemprop="image" content="http://broude.co.il/lib/images/broude3_thumb.png">
+  <meta property="og:image:url" content="http://broude.co.il/lib/images/broude_thumb.png">
+  <meta property="og:image" itemprop="image" content="http://broude.co.il/lib/images/broude_thumb.png">
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:description" content="Personal website that acts as a portfolio." />
-  <!-- <link itemprop="thumbnailUrl" href="http://broude.co.il/lib/images/broude3_thumb.png"> -->
 
 
   <!-- External -->
@@ -42,17 +41,17 @@
 
 <body>
   <script type="text/javascript">
-  		let isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-  		if (isMobile) {
-        let head = document.getElementsByTagName('head')[0];
+    let isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+    if (isMobile) {
+      let head = document.getElementsByTagName('head')[0];
 
-        let style = document.createElement('link');
-        style.href = "../lib/styles/mobile_style.css";
-        style.type = 'text/css';
-        style.rel = 'stylesheet';
-        head.append(style);
-  		}
-  	</script>
+      let style = document.createElement('link');
+      style.href = "../lib/styles/mobile_style.css";
+      style.type = 'text/css';
+      style.rel = 'stylesheet';
+      head.append(style);
+    }
+  </script>
   <div class="side_container">
 
     <a id="github_placeholder" href="https://github.com/JulianBroudy" target="_blank" aria-label="GitHub">
@@ -153,8 +152,7 @@
                 <li class="glide__slide">
                   <div class="project_showcase">
                     <div class="pr_pic">
-                      <img src="../lib/images/gcm-system.png" alt="">
-
+                      <a href="https://github.com/JulianBroudy/gcm-system#samples" target="_blank"><img src="../lib/images/gcm-system.png" alt=""></a>
                     </div>
                     <div class="pr_heading">
                       <div class="pr_title">GCM System</div>
@@ -206,8 +204,8 @@
                 <li class="glide__slide">
                   <div class="project_showcase">
                     <div class="pr_pic">
-                      <img src="../lib/images/skedaddle.png" alt="">
-
+                      <a href="https://github.com/JulianBroudy/skedaddle#samples" target="_blank"><img src="../lib/images/skedaddle.png" alt="">
+                      </a>
                     </div>
                     <div class="pr_heading">
                       <div class="pr_title">Skedaddle</div>
@@ -246,8 +244,8 @@
                 <li class="glide__slide">
                   <div class="project_showcase">
                     <div class="pr_pic">
-                      <img src="../lib/images/broude.png" alt="">
-
+                      <a href="https://github.com/JulianBroudy/my-portfolio" target="_blank"> <img src="../lib/images/broude3.png" alt="">
+                      </a>
                     </div>
                     <div class="pr_heading">
                       <div class="pr_title">Broude.co.il</div>
