--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
                   <div class="project_showcase">
                     <div class="pr_pic">
                       <a href="https://github.com/JulianBroudy/gcm-system#samples" target="_blank"><img src="../lib/images/gcm-system.png" alt=""></a>
+                      <div class="img_sample_text">
+                        <span>HQ Gif<br>
+                          samples are<br>
+                          1 click away</span></div>
+
                     </div>
                     <div class="pr_heading">
                       <div class="pr_title">GCM System</div>
@@ -205,6 +210,10 @@
                   <div class="project_showcase">
                     <div class="pr_pic">
                       <a href="https://github.com/JulianBroudy/skedaddle#samples" target="_blank"><img src="../lib/images/skedaddle.png" alt="">
+                        <div class="img_sample_text">
+                          <span>HQ Gif<br>
+                            samples are<br>
+                            1 click away</span></div>
                       </a>
                     </div>
                     <div class="pr_heading">
@@ -244,7 +253,11 @@
                 <li class="glide__slide">
                   <div class="project_showcase">
                     <div class="pr_pic">
-                      <a href="https://github.com/JulianBroudy/my-portfolio" target="_blank"> <img src="../lib/images/broude3.png" alt="">
+                      <a href="https://github.com/JulianBroudy/my-portfolio" target="_blank"> <img src="../lib/images/broude4.png" alt="">
+                        <div class="img_sample_text">
+                          <span>HQ Gif<br>
+                            samples are<br>
+                            1 click away</span></div>
                       </a>
                     </div>
                     <div class="pr_heading">
