Google Analytics support

--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163662523-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-163662523-1');
+  </script>
+
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -153,10 +167,6 @@
                   <div class="project_showcase">
                     <div class="pr_pic">
                       <a href="https://github.com/JulianBroudy/gcm-system#samples" target="_blank"><img src="../lib/images/gcm-system.png" alt=""></a>
-                      <div class="img_sample_text">
-                        <span>HQ Gif<br>
-                          samples are<br>
-                          1 click away</span></div>
 
                     </div>
                     <div class="pr_heading">
@@ -210,10 +220,6 @@
                   <div class="project_showcase">
                     <div class="pr_pic">
                       <a href="https://github.com/JulianBroudy/skedaddle#samples" target="_blank"><img src="../lib/images/skedaddle.png" alt="">
-                        <div class="img_sample_text">
-                          <span>HQ Gif<br>
-                            samples are<br>
-                            1 click away</span></div>
                       </a>
                     </div>
                     <div class="pr_heading">
@@ -254,10 +260,6 @@
                   <div class="project_showcase">
                     <div class="pr_pic">
                       <a href="https://github.com/JulianBroudy/my-portfolio" target="_blank"> <img src="../lib/images/broude4.png" alt="">
-                        <div class="img_sample_text">
-                          <span>HQ Gif<br>
-                            samples are<br>
-                            1 click away</span></div>
                       </a>
                     </div>
                     <div class="pr_heading">
