--- a/message_sent.html
+++ b/message_sent.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163662523-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-163662523-1');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,13 +29,15 @@
 
   <title>Message Sent</title>
 </head>
+
 <body>
   <center>
-  <h1 class="text">Thank you!</h1>
-  <h2 class="text">Your message has been successfully sent.</h2>
-  <br><br>
-  <a href="http://broude.co.il/#myProjects" data-title="Go Back"></a>
+    <h1 class="text">Thank you!</h1>
+    <h2 class="text">Your message has been successfully sent.</h2>
+    <br><br>
+    <a href="http://broude.co.il/#myProjects" data-title="Go Back"></a>
   </center>
 </body>
+
 </html>
 <script src="../lib/my_btn.js"></script>
