Adding user canvas control

--- a/index.html
+++ b/index.html
@@ -106,34 +106,39 @@
 
   <div class="controls_container">
     <div class="speed_controls">
-      <svg class="speed_text" viewBox="0 0 100 30">
-        <text x="50%" y="60%" text-anchor="middle">Speed</text>
-      </svg>
+      <div class="speed_title">
+        Rotation:<br>
+        <span id="speed_degree">45º</span><br>
+        per frame
+      </div>
       <div class="decrease_speed">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <svg id="speed_dec_btn" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm7 14h-14v-4h14v4z" /></svg>
       </div>
       <div class="increase_speed">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <svg id="speed_inc_btn" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm7 14h-5v5h-4v-5h-5v-4h5v-5h4v5h5v4z" /></svg>
       </div>
     </div>
     <div class="plane_controls">
-      <svg class="plane_text" viewBox="0 0 100 30">
-        <text x="50%" y="60%" text-anchor="middle">Plane</text>
-      </svg>
-      <svg class="xy_plane" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+      <div class="plane_title">
+        Planes (T/F):
+      </div>
+      <span class="xy_text">XY</span>
+      <svg class="xy_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path
           d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm7.91 6.646l-7.905 4.218-7.872-4.294 7.862-4.289 7.915 4.365zm-16.91 1.584l8 4.363v8.607l-8-4.268v-8.702zm10 12.97v-8.6l8-4.269v8.6l-8 4.269zm-8-9.601l4 2.182v4.085l-4-2.134v-4.133z" />
-        <text class="xy_plane_text" x=50% y=50% text-anchor="middle">rotate Z</text></svg>
-      <svg class="yz_plane" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+      </svg>
+      <span class="yz_text">YZ</span>
+      <svg class="yz_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path
           d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm7.91 6.646l-7.905 4.218-7.872-4.294 7.862-4.289 7.915 4.365zm-16.91 1.584l8 4.363v8.607l-8-4.268v-8.702zm10 12.97v-8.6l8-4.269v8.6l-8 4.269zm6-9.534v4.066l-4 2.134v-4.066l4-2.134z" />
-        </svg>
-      <svg class="xz_plane" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+      </svg>
+      <span class="xz_text">XZ</span>
+      <svg class="xz_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path
           d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm7.91 6.646l-7.905 4.218-7.872-4.294 7.862-4.289 7.915 4.365zm-16.91 1.584l8 4.363v8.607l-8-4.268v-8.702zm10 12.97v-8.6l8-4.269v8.6l-8 4.269zm-1.01-16.638l3.726 2.055-3.7 1.974-3.706-2.021 3.68-2.008z" />
-        </svg>
+      </svg>
     </div>
   </div>
 
