--- a/index.html
+++ b/index.html
@@ -104,42 +104,101 @@
   </div>
 
 
-  <div class="controls_container">
-    <div class="speed_controls">
-      <div class="speed_title">
-        Rotation:<br>
-        <span id="speed_degree">45º</span><br>
-        per frame
-      </div>
-      <div class="decrease_speed">
-        <svg id="speed_dec_btn" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm7 14h-14v-4h14v4z" /></svg>
-      </div>
-      <div class="increase_speed">
-        <svg id="speed_inc_btn" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm7 14h-5v5h-4v-5h-5v-4h5v-5h4v5h5v4z" /></svg>
-      </div>
+  <div id="menu">
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
-    <div class="plane_controls">
-      <div class="plane_title">
-        Planes (T/F):
+    <div class="menu-inner">
+      <div class="menu-grid hidden">
+        <div class="menu-the-title">
+          <div id="line-1">Background</div>
+          <div id="line-2">Controller</div>
+        </div>
+        <div class="speed_controls menu-grid-bg">
+          <div class="speed_title menu-title">
+            Rotation Speed:</div>
+          <div class="decrease_speed">
+            <svg id="speed_dec_btn" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm7 14h-14v-4h14v4z" /></svg>
+          </div>
+          <div class="increase_speed">
+            <svg id="speed_inc_btn" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm7 14h-5v5h-4v-5h-5v-4h5v-5h4v5h5v4z" /></svg>
+          </div>
+          <div class="speed_degree">45º</div>
+          <div class="speed_info">(deg per frame)</div>
+        </div>
+
+        <div class="plane_controls menu-grid-bg">
+          <div class="plane_title  menu-title">
+            Rotation Planes:
+          </div>
+          <span class="xy_text">XY plane</span>
+          <svg class="xy_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path
+              d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm7.91 6.646l-7.905 4.218-7.872-4.294 7.862-4.289 7.915 4.365zm-16.91 1.584l8 4.363v8.607l-8-4.268v-8.702zm10 12.97v-8.6l8-4.269v8.6l-8 4.269zm-8-9.601l4 2.182v4.085l-4-2.134v-4.133z" />
+          </svg>
+          <span class="yz_text">YZ plane</span>
+          <svg class="yz_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path
+              d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm7.91 6.646l-7.905 4.218-7.872-4.294 7.862-4.289 7.915 4.365zm-16.91 1.584l8 4.363v8.607l-8-4.268v-8.702zm10 12.97v-8.6l8-4.269v8.6l-8 4.269zm6-9.534v4.066l-4 2.134v-4.066l4-2.134z" />
+          </svg>
+          <span class="xz_text">XZ plane</span>
+          <svg class="xz_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path
+              d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm7.91 6.646l-7.905 4.218-7.872-4.294 7.862-4.289 7.915 4.365zm-16.91 1.584l8 4.363v8.607l-8-4.268v-8.702zm10 12.97v-8.6l8-4.269v8.6l-8 4.269zm-1.01-16.638l3.726 2.055-3.7 1.974-3.706-2.021 3.68-2.008z" />
+          </svg>
+          <div class="plane_info">(Click to enable)</div>
+        </div>
+        <div class="mouse_controls menu-grid-bg">
+          <div class="mouse_title  menu-title">
+            Rotate Around:
+          </div>
+          <svg class="center_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path
+              d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm-1 21.2l-6.664-3.555 4.201-2.801c1.08-.719-.066-2.359-1.243-1.575l-4.294 2.862v-7.901l8 4.363v8.607zm-6.867-14.63l6.867-3.746v4.426c0 1.323 2 1.324 2 0v-4.415l6.91 3.811-7.905 4.218-7.872-4.294zm8.867 6.03l8-4.269v7.8l-4.263-2.842c-1.181-.785-2.323.855-1.245 1.574l4.172 2.781-6.664 3.556v-8.6z" />
+            </svg>
+          <!--         <svg class="center_icon" viewBox="0 0 20 20">
+  							<path d="M17.659,9.597h-1.224c-0.199-3.235-2.797-5.833-6.032-6.033V2.341c0-0.222-0.182-0.403-0.403-0.403S9.597,2.119,9.597,2.341v1.223c-3.235,0.2-5.833,2.798-6.033,6.033H2.341c-0.222,0-0.403,0.182-0.403,0.403s0.182,0.403,0.403,0.403h1.223c0.2,3.235,2.798,5.833,6.033,6.032v1.224c0,0.222,0.182,0.403,0.403,0.403s0.403-0.182,0.403-0.403v-1.224c3.235-0.199,5.833-2.797,6.032-6.032h1.224c0.222,0,0.403-0.182,0.403-0.403S17.881,9.597,17.659,9.597 M14.435,10.403h1.193c-0.198,2.791-2.434,5.026-5.225,5.225v-1.193c0-0.222-0.182-0.403-0.403-0.403s-0.403,0.182-0.403,0.403v1.193c-2.792-0.198-5.027-2.434-5.224-5.225h1.193c0.222,0,0.403-0.182,0.403-0.403S5.787,9.597,5.565,9.597H4.373C4.57,6.805,6.805,4.57,9.597,4.373v1.193c0,0.222,0.182,0.403,0.403,0.403s0.403-0.182,0.403-0.403V4.373c2.791,0.197,5.026,2.433,5.225,5.224h-1.193c-0.222,0-0.403,0.182-0.403,0.403S14.213,10.403,14.435,10.403"></path>
+  						</svg> -->
+          <span class="center_rot">Center</span>
+
+          <svg class="mouse_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path
+              d="M11 9l10 7.675-4.236.71 2.659 5.422-2.44 1.193-2.675-5.474-3.308 2.863v-12.389zm0-5c-2.209 0-4 1.791-4 4 0 1.477.81 2.752 2 3.445v-1.225c-.609-.55-1-1.337-1-2.22 0-1.654 1.346-3 3-3s3 1.346 3 3c0 .246-.038.481-.094.709l.842.646c.154-.424.252-.877.252-1.355 0-2.209-1.791-4-4-4zm-2 9.65c-2.327-.826-4-3.044-4-5.65 0-3.309 2.691-6 6-6s6 2.691 6 6c0 .939-.223 1.824-.609 2.617l1.617 1.241c.631-1.145.992-2.459.992-3.858 0-4.418-3.581-8-8-8-4.418 0-8 3.582-8 8 0 3.727 2.551 6.849 6 7.738v-2.088z" />
+            </svg>
+          <span class="mouse_rot">Mouse</span>
+        </div>
+        <div class="controls_mouse menu-grid-bg">
+          <div class="mouse_title  menu-title">
+            Mouse Depth:</div>
+          <svg class="depth_on_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path
+              d="M21.856 10.303c.086.554.144 1.118.144 1.697 0 6.075-4.925 11-11 11s-11-4.925-11-11 4.925-11 11-11c2.347 0 4.518.741 6.304 1.993l-1.422 1.457c-1.408-.913-3.082-1.45-4.882-1.45-4.962 0-9 4.038-9 9s4.038 9 9 9c4.894 0 8.879-3.928 8.99-8.795l1.866-1.902zm-.952-8.136l-9.404 9.639-3.843-3.614-3.095 3.098 6.938 6.71 12.5-12.737-3.096-3.096z" />
+            </svg>
+          <span class="depth_on_text">With Z</span>
+          <svg class="depth_off_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path
+              d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6 16.094l-4.157-4.104 4.1-4.141-1.849-1.849-4.105 4.159-4.156-4.102-1.833 1.834 4.161 4.12-4.104 4.157 1.834 1.832 4.118-4.159 4.143 4.102 1.848-1.849z" />
+            </svg>
+          <span class="depth_off_text">Without Z</span>
+          <div class="mouse_info">(Mouse coordinate)</div>
+
+        </div>
+
+        <div class="not_secret">
+          If you were looking for the secret door, this is <b>not</b> it.
+        </div>
+
       </div>
-      <span class="xy_text">XY</span>
-      <svg class="xy_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-        <path
-          d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm7.91 6.646l-7.905 4.218-7.872-4.294 7.862-4.289 7.915 4.365zm-16.91 1.584l8 4.363v8.607l-8-4.268v-8.702zm10 12.97v-8.6l8-4.269v8.6l-8 4.269zm-8-9.601l4 2.182v4.085l-4-2.134v-4.133z" />
-      </svg>
-      <span class="yz_text">YZ</span>
-      <svg class="yz_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-        <path
-          d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm7.91 6.646l-7.905 4.218-7.872-4.294 7.862-4.289 7.915 4.365zm-16.91 1.584l8 4.363v8.607l-8-4.268v-8.702zm10 12.97v-8.6l8-4.269v8.6l-8 4.269zm6-9.534v4.066l-4 2.134v-4.066l4-2.134z" />
-      </svg>
-      <span class="xz_text">XZ</span>
-      <svg class="xz_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-        <path
-          d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm7.91 6.646l-7.905 4.218-7.872-4.294 7.862-4.289 7.915 4.365zm-16.91 1.584l8 4.363v8.607l-8-4.268v-8.702zm10 12.97v-8.6l8-4.269v8.6l-8 4.269zm-1.01-16.638l3.726 2.055-3.7 1.974-3.706-2.021 3.68-2.008z" />
-      </svg>
+
     </div>
+
+    <svg version="1.1" id="blob" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <path id="blob-path" d="M60,500H0V0h60c0,0,20,172,20,250S60,900,60,500z" />
+    </svg>
   </div>
 
 
@@ -581,3 +640,94 @@
   }).mount();
 </script>
 <script src="../lib/index.js"></script>
+<script type="text/javascript">
+  // $(window).on(function(){
+  $(window).on("load", function() {
+    var currHeight = window.innerHeight,
+      x = 0,
+      y = currHeight / 2,
+      curveX = 10,
+      curveY = 0,
+      targetX = 0,
+      xitteration = 0,
+      yitteration = 0,
+      menuExpanded = false;
+
+    blob = $('#blob'),
+      blobPath = $('#blob-path'),
+
+      hamburger = $('.hamburger');
+
+    $(this).on('mousemove', function(e) {
+      x = e.pageX;
+
+      y = e.pageY;
+    });
+
+    $('.hamburger, .menu-inner').on('mouseenter', function() {
+      $(this).parent().addClass('expanded');
+      $('.menu-grid').removeClass('hidden');
+      menuExpanded = true;
+    });
+
+    $('.menu-inner').on('mouseleave', function() {
+      menuExpanded = false;
+      $(this).parent().removeClass('expanded');
+      $('.menu-grid').addClass('hidden');
+
+    });
+
+    function easeOutExpo(currentIteration, startValue, changeInValue, totalIterations) {
+      return changeInValue * (-Math.pow(2, -10 * currentIteration / totalIterations) + 1) + startValue;
+    }
+
+    var hoverZone = 200;
+    var expandAmount = 20;
+
+    function svgCurve() {
+      if ((curveX > x - 1) && (curveX < x + 1)) {
+        xitteration = 0;
+      } else {
+        if (menuExpanded) {
+          targetX = 0;
+        } else {
+          xitteration = 0;
+          if (x > hoverZone) {
+            targetX = 0;
+          } else {
+            targetX = -(((60 + expandAmount) / 100) * (x - hoverZone));
+          }
+        }
+        xitteration++;
+      }
+
+      if ((curveY > y - 1) && (curveY < y + 1)) {
+        yitteration = 0;
+      } else {
+        yitteration = 0;
+        yitteration++;
+      }
+
+      curveX = easeOutExpo(xitteration, curveX, targetX - curveX, 100);
+      curveY = easeOutExpo(yitteration, curveY, y - curveY, 100);
+
+      var anchorDistance = 200;
+      var curviness = anchorDistance - 40;
+
+      var newCurve2 = "M60," + currHeight + "H0V0h60v" + (curveY - anchorDistance) + "c0," + curviness + "," + curveX + "," + curviness + "," + curveX + "," + anchorDistance + "S60," + (curveY) + ",60," + (curveY + (anchorDistance * 2)) + "V" +
+        currHeight + "z";
+
+      blobPath.attr('d', newCurve2);
+
+      blob.width(curveX + 60);
+
+      hamburger.css('transform', 'translate(' + curveX + 'px, ' + curveY + 'px)');
+
+      $('h2').css('transform', 'translateY(' + curveY + 'px)');
+      window.requestAnimationFrame(svgCurve);
+    }
+
+    window.requestAnimationFrame(svgCurve);
+
+  });
+</script>
