hide canvas controller on small screen

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <b><u>Why?</u></b> 🤔<br>
             Well, imagining the "impossible" and seeing it through, overcoming obstacles, making extraordinary relationships, the exploration, the knowledge one gains. What's not to love?</p>
           <p>
-            Currently, I am in my senior year and <b>I am looking for</b> a place where I can leverage my creative thinking, imaginative mind and can-do attitude to help our DOOMED humanity. THE END 🤪.
+            Currently, I am in my senior year. I live in Tel Aviv and <b>I am open to new opportunities</b>. More specifically, a place where I can leverage my imaginative mind and can-do attitude to help our DOOMED humanity. Hopefully, in a full-stack related role. THE END 🤪.
           </p>
         </div>
 
