--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <link rel="stylesheet" href="../lib/styles/glide.core.min.css" />
   <link rel="stylesheet" href="../lib/styles/glide.theme.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js" integrity="sha256-CnNQJd80jPuIDyeQRRq7+Wgt+++Kl0dZLt4ETNmxMIw=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Modak&family=Raleway:wght@500&family=Roboto:wght@300;400;500;700&family=Qwigley&family=Parisienne&family=Allura&display=swap">
 
@@ -54,9 +55,20 @@
 
 
 <body>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     let isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+    // alert('Hey there!\nI am very pleased you took the time to take a peek.\nYou might want to take a look at the \'Desktop Site\' as it currently offers much more than the mobile version.\nEnjoy!');
+    Swal.fire({
+      icon: 'info',
+      title: '<h1>Hi there!',
+      html: '<h2  style=" font-size:22px; font-weight: bold;">Thank you for taking the time to take a peek!</h2><br><p style="text-align:left; font-size:18px; line-height:30px; font-weight: bold;">You might want to take a look at the \'Desktop Site\' as it currently offers much more than the mobile version.<br><br>Enjoy!</p>',
+      width: 380,
+      onClose:function(){
+        console.log('hi');
+      }
+});
     if (isMobile) {
+      alert('Hey there!\nI am very pleased you took the time to take a peek.\nYou might want to take a look at the \'Desktop Site\' as it currently offers much more than the mobile version.\nEnjoy!');
       let head = document.getElementsByTagName('head')[0];
 
       let style = document.createElement('link');
@@ -65,7 +77,7 @@
       style.rel = 'stylesheet';
       head.append(style);
     }
-  </script>
+  </script> -->
   <div class="side_container">
 
     <a id="github_placeholder" href="https://github.com/JulianBroudy" target="_blank" aria-label="GitHub">
@@ -725,7 +737,6 @@
 
       hamburger.css('transform', 'translate(' + curveX + 'px, ' + curveY + 'px)');
 
-      $('h2').css('transform', 'translateY(' + curveY + 'px)');
       window.requestAnimationFrame(svgCurve);
     }
 
