fixed mobile css not loading on page reload

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
       // cards: true,
       // cardsOptions: {perspective: 100, fadeContent: false, fadeBackground: false},
       // animateAnchor: true,
-      controlArrows: true,
+      // controlArrows: true,
       // responsiveWidth: 0,
       // responsiveHeight: 0,
       // navigarion: true,
