fixed issue with Edge browser

--- a/index.html
+++ b/index.html
@@ -55,29 +55,6 @@
 
 
 <body>
-  <!-- <script type="text/javascript">
-    let isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-    // alert('Hey there!\nI am very pleased you took the time to take a peek.\nYou might want to take a look at the \'Desktop Site\' as it currently offers much more than the mobile version.\nEnjoy!');
-    Swal.fire({
-      icon: 'info',
-      title: '<h1>Hi there!',
-      html: '<h2  style=" font-size:22px; font-weight: bold;">Thank you for taking the time to take a peek!</h2><br><p style="text-align:left; font-size:18px; line-height:30px; font-weight: bold;">You might want to take a look at the \'Desktop Site\' as it currently offers much more than the mobile version.<br><br>Enjoy!</p>',
-      width: 380,
-      onClose:function(){
-        console.log('hi');
-      }
-});
-    if (isMobile) {
-      alert('Hey there!\nI am very pleased you took the time to take a peek.\nYou might want to take a look at the \'Desktop Site\' as it currently offers much more than the mobile version.\nEnjoy!');
-      let head = document.getElementsByTagName('head')[0];
-
-      let style = document.createElement('link');
-      style.href = "../lib/styles/mobile_style.css";
-      style.type = 'text/css';
-      style.rel = 'stylesheet';
-      head.append(style);
-    }
-  </script> -->
   <div class="side_container">
 
     <a id="github_placeholder" href="https://github.com/JulianBroudy" target="_blank" aria-label="GitHub">
@@ -172,9 +149,6 @@
             <path
               d="M12 0l-11 6v12.131l11 5.869 11-5.869v-12.066l-11-6.065zm-1 21.2l-6.664-3.555 4.201-2.801c1.08-.719-.066-2.359-1.243-1.575l-4.294 2.862v-7.901l8 4.363v8.607zm-6.867-14.63l6.867-3.746v4.426c0 1.323 2 1.324 2 0v-4.415l6.91 3.811-7.905 4.218-7.872-4.294zm8.867 6.03l8-4.269v7.8l-4.263-2.842c-1.181-.785-2.323.855-1.245 1.574l4.172 2.781-6.664 3.556v-8.6z" />
           </svg>
-          <!--         <svg class="center_icon" viewBox="0 0 20 20">
-  							<path d="M17.659,9.597h-1.224c-0.199-3.235-2.797-5.833-6.032-6.033V2.341c0-0.222-0.182-0.403-0.403-0.403S9.597,2.119,9.597,2.341v1.223c-3.235,0.2-5.833,2.798-6.033,6.033H2.341c-0.222,0-0.403,0.182-0.403,0.403s0.182,0.403,0.403,0.403h1.223c0.2,3.235,2.798,5.833,6.033,6.032v1.224c0,0.222,0.182,0.403,0.403,0.403s0.403-0.182,0.403-0.403v-1.224c3.235-0.199,5.833-2.797,6.032-6.032h1.224c0.222,0,0.403-0.182,0.403-0.403S17.881,9.597,17.659,9.597 M14.435,10.403h1.193c-0.198,2.791-2.434,5.026-5.225,5.225v-1.193c0-0.222-0.182-0.403-0.403-0.403s-0.403,0.182-0.403,0.403v1.193c-2.792-0.198-5.027-2.434-5.224-5.225h1.193c0.222,0,0.403-0.182,0.403-0.403S5.787,9.597,5.565,9.597H4.373C4.57,6.805,6.805,4.57,9.597,4.373v1.193c0,0.222,0.182,0.403,0.403,0.403s0.403-0.182,0.403-0.403V4.373c2.791,0.197,5.026,2.433,5.225,5.224h-1.193c-0.222,0-0.403,0.182-0.403,0.403S14.213,10.403,14.435,10.403"></path>
-  						</svg> -->
           <span class="center_rot">Center</span>
 
           <svg class="mouse_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -353,9 +327,9 @@
                       </a>
                     </div>
                     <div class="pr_descr">
-                      A minimalistic UI puzzle game, inspired by "15-puzzle".<br>
+                      A minimalistic UI puzzle game, inspired by the <a href="https://en.wikipedia.org/wiki/15_puzzle">"15-puzzle".</a><br>
                       With the intention of exploring JavaFX's capabilities, I found myself hooked into my computer unable to do anything else.<br>
-                      The game currently supports2 game modes: picture mode (upload or default) & regular mode.<br> The game is full of animations and neat effects.<br> Click the icon next to the title to see some HQ Gif samples.
+                      The game currently supports 2 game modes: picture mode (custom or default) & regular mode.<br> The game is full of animations and neat effects.<br> Click the icon next to the title to see some HQ Gif samples.
                     </div>
                     <div class="pr_techn">
                       <div>
@@ -620,8 +594,7 @@
         }
 
       },
-      // sectionsColor: ['transparent', 'whitesmoke', '#C0C0C0'],
-      responsiveHeight: 0,
+      // responsiveHeight: 0,
       autoScrolling: true,
       // scrollBar:true,
       // scrollHorizontally: true,
