--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Modak&family=Raleway:wght@500&family=Roboto:wght@300;400;500;700&family=Qwigley&family=Parisienne&family=Allura&display=swap">
 
   <!-- Local -->
-  <link rel="stylesheet" href="../lib/styles/stylesNew.css" />
+  <link rel="stylesheet" href="../lib/v2/stylesheet.css" />
   <link rel="stylesheet" href="../lib/styles/fullpage.css" />
 </head>
 
