--- a/index.html
+++ b/index.html
@@ -42,35 +42,246 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Modak&family=Raleway:wght@500&family=Roboto:wght@300;400;500;700&family=Qwigley&family=Parisienne&family=Allura&display=swap">
 
   <!-- Local -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <link rel="stylesheet" href="../lib/v2/baseStyles.css" />
   <link rel="stylesheet" href="../lib/v2/stylesheet.css" />
   <link rel="stylesheet" href="../lib/styles/fullpage.css" />
+
 </head>
 
 
 <body>
   <div id="fullpage">
 
-    <div class="section section1">
+    <div class="section section-1">
 
-      <div class="section1__container">
+      <h1 class="section-title">Projects</h1>
+      <div data-animation="slide" data-duration="500" data-infinite="1" class="slider w-slider">
+        <div class="w-slider-mask">
+          <div class="slide w-slide">
+            <div class="w-layout-grid project-grid">
+              <h2 class="project-title">GCM-System</h2>
+              <div class="project-description">
+                <p class="project-paragraph">A full-stack UX focused JavaFX application for world maps&#x27; marketing.</p>
+                <p class="project-paragraph">The application supports both the buyers and the company&#x27;s employees. i.e., it offers options to create new maps or edit existing ones. Supports authorization requests and approvals. Allows clients to
+                  browse, purchase, subscribe and download default views or customized map views (e.g., specific tours, sites, etc...).</p>
+              </div>
+              <div class="w-layout-grid project-technologies-grid">
+                <div class="project-technology">Eclipse</div>
+                <div class="project-technology">Maven</div>
+                <div class="project-technology">Guice</div>
+                <div class="project-technology">JavaFX
+                  <br />
+                </div>
+                <div class="project-technology">MySQL
+                  <br />
+                </div>
+                <div class="project-technology">FXML
+                  <br />
+                </div>
+                <div class="project-technology">CSS
+                  <br />
+                </div>
+                <div class="project-technology">GitHub VCS
+                  <br />
+                </div>
+              </div>
+              <div class="project-image"></div>
+            </div>
+          </div>
+          <div class="slide w-slide"></div>
+        </div>
+        <div class="left-arrow w-slider-arrow-left">
+          <div class="w-icon-slider-left"></div>
+        </div>
+        <div class="right-arrow w-slider-arrow-right">
+          <div class="w-icon-slider-right"></div>
+        </div>
+        <div class="slide-nav w-slider-nav w-round">
+          <div class="w-slider-dot w-active"></div>
+          <div class="w-slider-dot"></div>
+        </div>
       </div>
 
 
     </div>
 
 
-    <div class="section section2">
+    <div class="section section-2">
       <div class="section2__container">
+        <!-- Slider main container -->
+        <div class="swiper-container">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <div class="w-layout-grid project-grid">
+                <h2 class="project-title">GCM-System</h2>
+                <div class="project-description">
+                  <p class="project-paragraph">A full-stack UX focused JavaFX application for world maps&#x27; marketing.</p>
+                  <p class="project-paragraph">The application supports both the buyers and the company&#x27;s employees. i.e., it offers options to create new maps or edit existing ones. Supports authorization requests and approvals. Allows clients
+                    to
+                    browse, purchase, subscribe and download default views or customized map views (e.g., specific tours, sites, etc...).</p>
+                </div>
+                <div class="w-layout-grid project-technologies-grid">
+                  <div class="project-technology">Eclipse</div>
+                  <div class="project-technology">Maven</div>
+                  <div class="project-technology">Guice</div>
+                  <div class="project-technology">JavaFX
+                    <br />
+                  </div>
+                  <div class="project-technology">MySQL
+                    <br />
+                  </div>
+                  <div class="project-technology">FXML
+                    <br />
+                  </div>
+                  <div class="project-technology">CSS
+                    <br />
+                  </div>
+                  <div class="project-technology">GitHub VCS
+                    <br />
+                  </div>
+                </div>
+                <div class="project-image"></div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="w-layout-grid project-grid">
+                <h2 class="project-title">GCM-System</h2>
+                <div class="project-description">
+                  <p class="project-paragraph">A full-stack UX focused JavaFX application for world maps&#x27; marketing.</p>
+                  <p class="project-paragraph">The application supports both the buyers and the company&#x27;s employees. i.e., it offers options to create new maps or edit existing ones. Supports authorization requests and approvals. Allows clients
+                    to
+                    browse, purchase, subscribe and download default views or customized map views (e.g., specific tours, sites, etc...).</p>
+                </div>
+                <div class="w-layout-grid project-technologies-grid">
+                  <div class="project-technology">Eclipse</div>
+                  <div class="project-technology">Maven</div>
+                  <div class="project-technology">Guice</div>
+                  <div class="project-technology">JavaFX
+                    <br />
+                  </div>
+                  <div class="project-technology">MySQL
+                    <br />
+                  </div>
+                  <div class="project-technology">FXML
+                    <br />
+                  </div>
+                  <div class="project-technology">CSS
+                    <br />
+                  </div>
+                  <div class="project-technology">GitHub VCS
+                    <br />
+                  </div>
+                </div>
+                <div class="project-image"></div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="w-layout-grid project-grid">
+                <h2 class="project-title">GCM-System</h2>
+                <div class="project-description">
+                  <p class="project-paragraph">A full-stack UX focused JavaFX application for world maps&#x27; marketing.</p>
+                  <p class="project-paragraph">The application supports both the buyers and the company&#x27;s employees. i.e., it offers options to create new maps or edit existing ones. Supports authorization requests and approvals. Allows clients
+                    to
+                    browse, purchase, subscribe and download default views or customized map views (e.g., specific tours, sites, etc...).</p>
+                </div>
+                <div class="w-layout-grid project-technologies-grid">
+                  <div class="project-technology">Eclipse</div>
+                  <div class="project-technology">Maven</div>
+                  <div class="project-technology">Guice</div>
+                  <div class="project-technology">JavaFX
+                    <br />
+                  </div>
+                  <div class="project-technology">MySQL
+                    <br />
+                  </div>
+                  <div class="project-technology">FXML
+                    <br />
+                  </div>
+                  <div class="project-technology">CSS
+                    <br />
+                  </div>
+                  <div class="project-technology">GitHub VCS
+                    <br />
+                  </div>
+                </div>
+                <div class="project-image"></div>
+              </div>
+            </div>
+            ...
+          </div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+
+          <!-- If we need navigation buttons -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
       </div>
     </div>
 
-    <div class="section section3">
+    <div class="section section-1">
+
+      <h1 class="section-title">Projects</h1>
+      <div data-animation="slide" data-duration="500" data-infinite="1" class="slider w-slider">
+        <div class="w-slider-mask">
+          <div class="slide w-slide">
+            <div class="w-layout-grid project-grid">
+              <h2 class="project-title">GCM-System</h2>
+              <div class="project-description">
+                <p class="project-paragraph">A full-stack UX focused JavaFX application for world maps&#x27; marketing.</p>
+                <p class="project-paragraph">The application supports both the buyers and the company&#x27;s employees. i.e., it offers options to create new maps or edit existing ones. Supports authorization requests and approvals. Allows clients to
+                  browse, purchase, subscribe and download default views or customized map views (e.g., specific tours, sites, etc...).</p>
+              </div>
+              <div class="w-layout-grid project-technologies-grid">
+                <div class="project-technology">Eclipse</div>
+                <div class="project-technology">Maven</div>
+                <div class="project-technology">Guice</div>
+                <div class="project-technology">JavaFX
+                  <br />
+                </div>
+                <div class="project-technology">MySQL
+                  <br />
+                </div>
+                <div class="project-technology">FXML
+                  <br />
+                </div>
+                <div class="project-technology">CSS
+                  <br />
+                </div>
+                <div class="project-technology">GitHub VCS
+                  <br />
+                </div>
+              </div>
+              <div class="project-image"></div>
+            </div>
+          </div>
+          <div class="slide w-slide"></div>
+        </div>
+        <div class="left-arrow w-slider-arrow-left">
+          <div class="w-icon-slider-left"></div>
+        </div>
+        <div class="right-arrow w-slider-arrow-right">
+          <div class="w-icon-slider-right"></div>
+        </div>
+        <div class="slide-nav w-slider-nav w-round">
+          <div class="w-slider-dot w-active"></div>
+          <div class="w-slider-dot"></div>
+        </div>
+      </div>
+
+
+    </div>
+
+    <div class="section section-3">
       <div class="section3__container">
       </div>
     </div>
 
 
-    <div class="section section4">
+    <div class="section section-4">
       <div class="section4__container">
 
 
@@ -90,6 +301,70 @@
         easing: 'easeInOutCubic',
         keyboardScrolling: true,
       });
+    </script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script>
+      // var swiperFront = new Swiper('.swiper-container', {
+      // slidesPerView: 'auto',
+      // centeredSlides: true,
+      // spaceBetween: 100,
+      // effect: 'coverflow',
+      // speed: 600,
+      // coverflowEffect: {
+      //   slideShadows: true
+      // },
+      // pagination: {
+      //   el: '.header-swiper-front .swiper-pagination',
+      //   clickable: true,
+      // },
+      // navigation: {
+      //   nextEl: '.header-swiper-front .swiper-button-next',
+      //   prevEl: '.header-swiper-front .swiper-button-prev',
+      // },
+      // keyboard: true,
+      // a11y: true,
+      // on: {
+      //   slideChange: function () {
+      //     var s = this;
+      //     if (s.activeIndex === $('.swiper-slide-gallery').index()) {
+      //       $(s.el).find('.swiper-pagination').hide();
+      //     }
+      //     else {
+      //       $(s.el).find('.swiper-pagination').show();
+      //     }
+      //   }
+      // }
+      var mySwiper = new Swiper('.swiper-container', {
+        // Optional parameters
+        // loop: true,
+        spaceBetween: 50,
+        // centeredSlides: true,
+        effect: 'coverflow',
+        coverflowEffect: {
+          slideShadows: false,
+          rotate: 30,
+          stretch: 100,
+          depth: 200
+        },
+
+        // If we need pagination
+        pagination: {
+          el: '.swiper-pagination',
+          type: 'bullets',
+          clickable: true,
+        },
+
+        // Navigation arrows
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
+
+        keyboard: {
+          enabled: true,
+        },
+
+      })
     </script>
 </body>
 
