--- a/index.html
+++ b/index.html
@@ -39,20 +39,21 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.extensions.min.js" integrity="sha256-pwVO9xs/zTEUDEzK1G4AbAAZbAzmU30SniNu2b9O0UY=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Modak&family=Raleway:wght@500&family=Roboto:wght@300;400;500;700&family=Qwigley&family=Parisienne&family=Allura&display=swap">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Modak&family=Raleway:wght@500&family=Roboto:wght@300;400;500;700&family=Qwigley&family=Parisienne&family=Allura&display=swap"> -->
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">
     WebFont.load({
       google: {
-        families: ["Marck Script:regular:cyrillic,latin,latin-ext", "Roboto:100italic,300,300italic,regular,italic,500,500italic,700,700italic", "Raleway:300,300italic,regular,italic,500,500italic"]
+        families: ["Marck Script:regular:cyrillic,latin,latin-ext", "Roboto:100italic,300,300italic,regular,italic,500,500italic,700,700italic",
+        "Raleway:300,300italic,regular,italic,500,500italic,700"]
       }
     });
   </script>
   <!-- Local -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-  <link rel="stylesheet" href="../lib/styles/fullpage.css" />
   <link rel="stylesheet" href="../lib/v2/baseStyles.css" />
   <link rel="stylesheet" href="../lib/v2/stylesheet.css" />
+  <link rel="stylesheet" href="../lib/styles/fullpage.css" />
 
 </head>
 
@@ -62,7 +63,7 @@
     <div id="section-1" class="section hero-section">
       <h1 class="quote">- As you sow, so shall you reap. -</h1>
       <div class="hero-center">
-        <h1 class="hero-text">Hi, I am curious <span class="hero-span">Julian</span>.</h1>
+        <h1 class="hero-text">Hi, I am curious <span class="hero-span" data-text="Julian">Julian</span>.</h1>
         <h1 class="hero-text">Also, I am a software engineer.</h1>
       </div>
       <a href="#" class="hero-button">
