content wrapper inset shadows

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
     </div>
     <div id="section-2" class="section">
       <div class="section-content-wrapper">
-        <h2 class="section-title">Heading</h2>
+        <h2 class="section-title">About</h2>
         <div class="swiper-container"></div>
       </div>
     </div>
     <div id="section-3" class="section">
       <div class="section-content-wrapper">
-        <h2 class="section-title">Heading</h2>
+        <h2 class="section-title">Projects</h2>
         <div class="swiper-container"></div>
       </div>
     </div>
     <div id="section-4" class="section">
       <div class="section-content-wrapper">
-        <h2 class="section-title">Heading</h2>
+        <h2 class="section-title">Say Hi!</h2>
         <div class="swiper-container"></div>
       </div>
     </div>
