--- a/index.html
+++ b/index.html
@@ -45,54 +45,61 @@
     WebFont.load({
       google: {
         families: ["Marck Script:regular:cyrillic,latin,latin-ext", "Roboto:100italic,300,300italic,regular,italic,500,500italic,700,700italic",
-        "Raleway:300,300italic,regular,italic,500,500italic,700"]
+          "Raleway:300,300italic,regular,italic,500,500italic,700"
+        ]
       }
     });
   </script>
   <!-- Local -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link rel="stylesheet" href="../lib/v2/baseStyles.css" />
-  <link rel="stylesheet" href="../lib/v2/stylesheet.css" />
   <link rel="stylesheet" href="../lib/styles/fullpage.css" />
-
+  <link rel="stylesheet" href="../lib/v2/stylesheet.css" />
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/multiple.js/0.0.1/multiple.min.js" integrity="sha256-4+vj4FcENMARxlfF1mJhD1UoK8TQDUKRoFtJO+Z0TIU=" crossorigin="anonymous"></script> -->
 </head>
 
 
 <body>
-  <div id="fullpage" class="j-fullpage">
-    <div id="section-1" class="section hero-section">
-      <h1 class="quote">- As you sow, so shall you reap. -</h1>
-      <div class="hero-center">
-        <h1 class="hero-text">Hi, I am curious <span class="hero-span" data-text="Julian">Julian</span>.</h1>
-        <h1 class="hero-text">Also, I am a software engineer.</h1>
+    <div class="full-bg-wrapper">
+      <div id="fullpage" class="j-fullpage">
+        <div id="section-1" class="section hero-section">
+          <h1 class="quote">- As you sow, so shall you reap. -</h1>
+          <div class="hero-center">
+            <h1 class="hero-text">Hi, I am curious <span class="hero-span" data-text="Julian">Julian</span>.</h1>
+            <h1 class="hero-text">Also, I am a software engineer.</h1>
+          </div>
+          <a href="#" class="hero-button">
+            <span></span><span></span><span></span>Tell me more
+          </a>
+        </div>
+        <div id="section-2" class="section">
+          <div class="section-content-wrapper">
+            <h2 class="section-title">About</h2>
+            <div class="swiper-container"></div>
+          </div>
+        </div>
+        <div id="section-3" class="section">
+          <div class="section-content-wrapper">
+            <h2 class="section-title">Projects</h2>
+            <div class="swiper-container"></div>
+          </div>
+        </div>
+        <div id="section-4" class="section">
+          <div class="section-content-wrapper">
+            <h2 class="section-title">Say Hi!</h2>
+            <div class="swiper-container"></div>
+          </div>
+        </div>
       </div>
-      <a href="#" class="hero-button">
-        <span></span><span></span><span></span>Tell me more
-      </a>
-    </div>
-    <div id="section-2" class="section">
-      <div class="section-content-wrapper">
-        <h2 class="section-title">About</h2>
-        <div class="swiper-container"></div>
-      </div>
-    </div>
-    <div id="section-3" class="section">
-      <div class="section-content-wrapper">
-        <h2 class="section-title">Projects</h2>
-        <div class="swiper-container"></div>
-      </div>
-    </div>
-    <div id="section-4" class="section">
-      <div class="section-content-wrapper">
-        <h2 class="section-title">Say Hi!</h2>
-        <div class="swiper-container"></div>
-      </div>
-    </div>
-  </div>
 
-
-
+    </div>
   <script type="text/javascript">
+
+  // var multiple = new Multiple({
+  //   selector: '.section',
+  //   background: 'linear-gradient(#273463, #8B4256)'
+  // });
+
     new fullpage('#fullpage', {
       anchors: ['home', 'aboutMe', 'myProjects', 'contactMe'],
       autoScrolling: true,
